Day-4 Intro to DOM, async js, promises

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>html</title>
 
-    <script src="./script.js"></script>
+    <script src="./index.js"></script>
     <style>
         /* .bg-red {
             background-color: green;
