--- a/html/index2.html
+++ b/html/index2.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<script defer src="./index.js"></script>
 <body>
-    Page 2
+    <input id="name" type="text" placeholder="Enter your name">
+    <button id="btn" >Greet Me</button>
 </body>
 </html>
